--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,15 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <style>
+      * {
+      -ms-overflow-style: none;  /* Internet Explorer 10+ */
+      scrollbar-width: none;
+        }
+      *::-webkit-scrollbar {
+          display: none
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
