--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <style>
       * {
       -ms-overflow-style: none;  /* Internet Explorer 10+ */
