--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
     <style>
       * {
       -ms-overflow-style: none;  /* Internet Explorer 10+ */
